--- a/6.1.html
+++ b/6.1.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-    <div id="CatalogClass"></div>
+    <h3>Каталог</h3>
+    <div class="CatalogClass"></div>
     <hr>
-    <div id="cart"></div>
+    <h3>Карзина</h3>
+    <div class="cart"></div>
+    <button class="clr-cart">Очистить корзину</button>
     <script src="6.1.js"></script>
 
 
